--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -36,7 +36,7 @@ jobs:
         if('${{ github.event.inputs.downloadTool }}' -eq 'aria2'){aria2c ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
         if('${{ github.event.inputs.downloadTool }}' -eq 'curl'){curl ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
         if('${{ github.event.inputs.downloadTool }}' -eq 'wget'){wget ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
-    - name: output ISO version
+    - name: Output file sha256
       shell: bash
       run: |
         nowtime=$(date +%s)
