--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -46,5 +46,5 @@ jobs:
       run: |
         mkdir -p $ENV:APPDATA\rclone
         echo '${{ secrets.RCLONE_CONFIG }}' >> $ENV:APPDATA\rclone\rclone.conf
-        rclone copy * "OneDrive:/tmp" -P
+        rclone copy ./ "OneDrive:/tmp" -P
         
