--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -14,6 +14,8 @@ on:
           - aria2
           - curl
           - wget
+          - yt-dlp
+          - youtube-dl
       downloadToolOptions:
         description: 'Download tool options'
         required: false
