--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -36,8 +36,7 @@ jobs:
     - name: Download
       run: |
         if('${{ github.event.inputs.downloadTool }}' -eq 'aria2'){aria2c ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
-        if('${{ github.event.inputs.downloadTool }}' -eq 'curl'){curl ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
-        if('${{ github.event.inputs.downloadTool }}' -eq 'wget'){wget ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
+        if('${{ github.event.inputs.downloadTool }}' -ne 'aria2'){${{ github.event.inputs.downloadTool }} ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
     - name: Output file sha256
       shell: bash
       run: |
