--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -39,7 +39,7 @@ jobs:
     - name: Download
       run: |
         if('${{ github.event.inputs.downloadToolUA }}' -ne ''){UA='--user-agent "${{ github.event.inputs.downloadToolUA }}"'}
-        if('${{ github.event.inputs.downloadTool }}' -ne 'aria2'){${{ github.event.inputs.downloadTool }} ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}else{aria2c ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
+        if('${{ github.event.inputs.downloadTool }}' -ne 'aria2'){${{ github.event.inputs.downloadTool }} $UA ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}else{aria2c $UA ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
     - name: Output file sha256
       shell: bash
       run: |
