--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -19,9 +19,6 @@ on:
       downloadToolOptions:
         description: 'Download tool options'
         required: false
-      aria2UA:
-        description: 'aria2 user agent'
-        required: false
       checkoutMD5:
         description: 'Checkout MD5'
         required: false
@@ -43,8 +40,7 @@ jobs:
         mkdir -p C:\downloads
     - name: Download
       run: |
-        if('${{ github.event.inputs.aria2UA }}' -ne ''){$UA='-U "${{ github.event.inputs.downloadToolUA }}"'}
-        if('${{ github.event.inputs.downloadTool }}' -ne 'aria2'){${{ github.event.inputs.downloadTool }} ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}else{aria2c $UA ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
+        if('${{ github.event.inputs.downloadTool }}' -ne 'aria2'){${{ github.event.inputs.downloadTool }} ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}else{aria2c ${{ github.event.inputs.downloadToolOptions }} '${{ github.event.inputs.url }}'}
     - name: Output file sha256
       shell: bash
       run: |
